update trained model path

--- a/src/ml/walls_detection/evaluation.ipynb
+++ b/src/ml/walls_detection/evaluation.ipynb
@@ -9,8 +9,13 @@
     "\n",
     "This notebook presenets results of experimental evaluation\n",
     "\n",
-    "1. Quality Analysis section presents examples of images from test set and output of model (bboxes)\n",
-    "2. Quantity Analysis section is responsible for calcuating IoU, Dice score and accuracy metrics on test set."
+    "1. Quality analysis section presents examples of images from test set and output of model (bboxes)\n",
+    "2. Quantity analysis section is responsible for calcuating IoU, Dice score and accuracy metrics on test set.\n",
+    "\n",
+    "   Metrics on test set for model from epoch number 6 checkpoint (lowest loss function value):\n",
+    "   - 93% accuracy,\n",
+    "   - 0.74 Dice Score,\n",
+    "   - 0.60 IoU Score."
    ]
   },
   {
@@ -31,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model from file: /home/jovyan/ml/walls_detection/checkpoints/model_6_566.00565.pt\n"
+      "Loaded model from file: /home/jovyan/ml-eng-test-lfs-storage/models/model_6_566.00565.pt\n"
      ]
     }
    ],
@@ -65,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if does not work please contact with the repo admin (dataset is stored on google drive)\n",
     "if not os.path.exists('data/cubicasa5k.zip'):\n",
     "    !gdown 1Jiq9_0UpzJFF8qJlMnGD-TiemaOtc77x -O data/cubicasa5k.zip\n",
     "\n",
