--- a/src/ml/walls_detection/training.ipynb
+++ b/src/ml/walls_detection/training.ipynb
@@ -57,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if does not work please contact with the repo admin (dataset is stored on google drive)\n",
     "if not os.path.exists('data/cubicasa5k.zip'):\n",
     "    !gdown 1Jiq9_0UpzJFF8qJlMnGD-TiemaOtc77x -O data/cubicasa5k.zip"
    ]
