replace lfs storage by gdrive and add smoke tests

--- a/src/ml/walls_detection/evaluation.ipynb
+++ b/src/ml/walls_detection/evaluation.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model from file: /home/jovyan/ml-eng-test-lfs-storage/models/model_6_566.00565.pt\n"
+      "Loaded model from file: /tmp/models/model_6_566.00565.pt\n"
      ]
     }
    ],
